force-app/main/default/objects/Geonames_API__c/Geonames_API__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Geonames API</label>
</CustomObject>