force-app/main/default/objects/Geonames_API__c/fields/search_API__c.field-meta.xml
<CustomField>
    <fullName>search_API__c</fullName>
    <label>search API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>