force-app/main/default/objects/Geonames_API__c/fields/weather_API__c.field-meta.xml
<CustomField>
    <fullName>weather_API__c</fullName>
    <label>weather API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>